# comp310-othello-project

./: .gitignore  CMakeLists.txt  README.md  board-demo.c  board.c  board.h  board.hh  board_tests.cc  game.c  gamecurses.c  piece.c  piece.h  points.c  points.h  points.hh  points_tests.cc  tree.c  tree.h  tree.hh  tree_test  tree_test.c  tree_tests.cc  tree_visual.c
reports/: report-2020-10-18.md  report-2020-10-26.md  report-2020-11-01.md  report-2020-11-09.md  report-2020-11-16.md
